# derive-for

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs
