[package]
name = "derive-for"
version = "0.2.1"
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
description = "Macro for defining structs using the same derive procedural macros"
documentation = "https://docs.rs/derive_for"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
